test/testdata/classes/methods/static/invalid_property_assignment_error.lox
class Foo {
  static bar() {}
}
Foo.bar.y = 1; // error: property assignment is not valid for 'function' object
